--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -142,79 +142,58 @@ ruby:
             li.grey-item
               .text SHOP BY
             li.normal-item
-              div
-                a href='/dresses'
-                  .text View all dresses
+              a href='/dresses'
+                .text View all dresses
             li.normal-item
-              div
+              a href='#'
                 .text What's new
             li.normal-item
-              div
-                = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'text'
+              = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'text'
             li.normal-item.no-border
-              div
+              a href='#'
                 .text Instagram
             li.grey-item
               .text EVENTS
             li.normal-item
-              div
-                = link_to 'Formal', build_taxon_path('Formal'), class: 'text'
+              = link_to 'Formal', build_taxon_path('Formal'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Wedding', build_taxon_path('Wedding'), class: 'text'
+              = link_to 'Wedding', build_taxon_path('Wedding'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Birthday', build_taxon_path('Birthday'), class: 'text'
+              = link_to 'Birthday', build_taxon_path('Birthday'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Special Event', build_taxon_path('Special Event'), class: 'text'
+              = link_to 'Special Event', build_taxon_path('Special Event'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), class: 'text'
+              = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Bridsmaid', bridesmaid_collection_path, class: 'text'
+              = link_to 'Bridsmaid', bridesmaid_collection_path, class: 'text'
             li.normal-item
-              div
-                = link_to 'Graduation', build_taxon_path('Graduation'), class: 'text'
+              = link_to 'Graduation', build_taxon_path('Graduation'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Prom', build_taxon_path('Prom'), class: 'text'
+              = link_to 'Prom', build_taxon_path('Prom'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Homecoming', build_taxon_path('Homecoming'), class: 'text'
+              = link_to 'Homecoming', build_taxon_path('Homecoming'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Sweet 16', build_taxon_path('Sweet 16'), class: 'text'
+              = link_to 'Sweet 16', build_taxon_path('Sweet 16'), class: 'text'
             li.normal-item.no-border
-              div
-                = link_to 'Debutante', build_taxon_path('Debutante'), class: 'text'
+              = link_to 'Debutante', build_taxon_path('Debutante'), class: 'text'
             li.grey-item
               .text STYLES
             li.normal-item
-              div
-                = link_to 'Plus Size', build_taxon_path('Plus Size'), class: 'text'
+              = link_to 'Plus Size', build_taxon_path('Plus Size'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Two-Piece', build_taxon_path('Tow Piece'), class: 'text'
+              = link_to 'Two-Piece', build_taxon_path('Tow Piece'), class: 'text'
             li.normal-item
-              div
-                = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'text'
+              = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Strapless', build_taxon_path('Strapless'), class: 'text'
+              = link_to 'Strapless', build_taxon_path('Strapless'), class: 'text'
             li.normal-item
-              div
-                = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'text'
+              = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Split', build_taxon_path('Split'), class: 'text'
+              = link_to 'Split', build_taxon_path('Split'), class: 'text'
             li.normal-item
-              div
-                = link_to 'Backless', build_taxon_path('Backless'), class: 'text'
+              = link_to 'Backless', build_taxon_path('Backless'), class: 'text'
             li.normal-item.no-border
-              div
-                = link_to 'Lace', build_taxon_path('Lace'), class: 'text'
+              = link_to 'Lace', build_taxon_path('Lace'), class: 'text'
 
         div#lookbook-menu
           ul.nav.navbar-nav
@@ -238,7 +217,7 @@ ruby:
                 i.fa.fa-chevron-left
                 .back BACK
             li
-              .div.gray-bg STEAL HER STYLE
+              .gray-bg STEAL HER STYLE
               .mag-image
                 = image_tag "homepage/magazine/1.jpg"
                 .image-text.text-center TAYLOR
@@ -246,7 +225,7 @@ ruby:
                 = image_tag "homepage/magazine/2.jpg"
                 .image-text.text-center BEYONCE
 
-              .div.gray-bg BACKSTAGE PASS
+              .gray-bg BACKSTAGE PASS
               .mag-image
                 = image_tag "homepage/magazine/2.jpg"
                 .image-text.text-center Blah blah blah
