fix Tiago comment

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -4,10 +4,10 @@ ruby:
 #gray-top-banner.row.visible-md-block.visible-lg-block
 
   #customer-service.col-md-4
-    = banner.customer_service_contact
+    = banner.right_text
 
   #free-shipping.col-md-4.text-center
-    = banner.free_shipping_in_AU_and_NZ
+    = banner.center_text
   #account-area.col-md-4.text-right
     a href='/signup?cl=login-form'
       span.register-area REGISTER NOW
