--- a/app/views/google_tag_manager/_data_layer.html.erb
+++ b/app/views/google_tag_manager/_data_layer.html.erb
@@ -8,7 +8,8 @@
    # TODO: probably better not having this here, and putting it properly on a before_filter
    user      = Marketing::Gtm::UserPresenter.new(spree_user: spree_current_user, request_ip: request.ip)
    device    = Marketing::Gtm::DevicePresenter.new(user_agent: request.user_agent)
-   container = Marketing::Gtm::Container.new(presenters: [user, device])
+   site      = Marketing::Gtm::SitePresenter.new(current_site_version: current_site_version)
+   container = Marketing::Gtm::Container.new(presenters: [user, device, site])
 %>
 
 <script>
