--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -77,7 +77,7 @@
 
 	.product-order {
 		.select2-container--default .select2-selection--single {
-			background-color:#023648;
+			background-color:#f5f5f5;
 		}
 
 		.select2-container--default .select2-selection--single .select2-selection__rendered {
@@ -419,8 +419,8 @@
 	}
 
 	.select2-results__option[aria-selected="false"] {
-		background-color: #023648;
-		color:#FFFFFF;
+		background-color: #f5f5f5;
+		color: black;
 	}
 }
 
@@ -447,7 +447,7 @@ li.select2-results__option {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-	background-color: white;
+	background-color: white !important;
 	color: black;
 }
 
