Product Page - handle missing images

--- a/app/views/products/details/_share_buttons.html.slim
+++ b/app/views/products/details/_share_buttons.html.slim
@@ -1,3 +1,4 @@
+- if product.featured_image
   span style="margin-right:15px"
     span class='st_facebook_custom' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
       = image_tag '_icons/facebook.png'
