--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -217,21 +217,22 @@ ruby:
                 i.fa.fa-chevron-left
                 .back BACK
             li
-              .gray-bg STEAL HER STYLE
-              .mag-image
-                = image_tag "homepage/magazine/1.jpg"
-                .image-text.text-center TAYLOR
-              .mag-image
-                = image_tag "homepage/magazine/2.jpg"
-                .image-text.text-center BEYONCE
+              a href='http://fameandpartners.tumblr.com/'
+                .gray-bg STEAL HER STYLE
+                .mag-image
+                  = image_tag "homepage/magazine/1.jpg"
+                  .image-text.text-center TAYLOR
+                .mag-image
+                  = image_tag "homepage/magazine/2.jpg"
+                  .image-text.text-center BEYONCE
 
-              .gray-bg BACKSTAGE PASS
-              .mag-image
-                = image_tag "homepage/magazine/2.jpg"
-                .image-text.text-center Blah blah blah
-              .mag-image
-                = image_tag "homepage/magazine/3.jpg"
-                .image-text.text-center Blah blah blah
+                .gray-bg BACKSTAGE PASS
+                .mag-image
+                  = image_tag "homepage/magazine/2.jpg"
+                  .image-text.text-center Blah blah blah
+                .mag-image
+                  = image_tag "homepage/magazine/3.jpg"
+                  .image-text.text-center Blah blah blah
 
         ul.nav.navbar-nav#inner-main-menu
           li
