--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -37,7 +37,8 @@ ruby:
   span.dresses DRESSES
   span.events EVENTS
   span.lookbook LOOKBOOK
-  span.magazine MAGAZINE
+  span.magazine
+    a href='http://fameandpartners.tumblr.com/' MAGAZINE
   span.sale SALE
   span.made-for-you MADE FOR YOU
   span.join-us JOIN US
@@ -47,7 +48,7 @@ ruby:
 
 .row.rect#rect-new-this-week
   .black-bar
-    .inner-text SHOP ALL NEW THIS WEEK
+    a.inner-text href='/dresses/?order=newest' SHOP ALL NEW THIS WEEK
   .slideArea
     .containArea
       ul.rslides
