--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -29,7 +29,7 @@ header{
 }
 .nav-menu {
   text-transform: uppercase;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   z-index: 102;
 }
 
@@ -1126,6 +1126,9 @@ li#cart-trigger {
 
   #magazine-menu ul li{
     margin-left: 15px;
+    a{
+      padding: 0;
+    }
   }
 }
 
@@ -1158,6 +1161,10 @@ li#cart-trigger {
     color: black;
   }
   #home-menu{
+    a{
+      color: black;
+      text-decoration: none;
+    }
     border-color: #d7d7d7;
     border-width: 1px;
     border-style: solid;
@@ -1168,14 +1175,14 @@ li#cart-trigger {
     font-weight: 700;
     height: 30px;
     span{
-      padding-left: 15px;
-      padding-right: 15px;
-      padding-top: 7px;
-      padding-bottom: 7px;
-      font-size: 8pt;
-      cursor: pointer;
-      position: relative;
-      top:2px;
+       padding-left: 15px;
+       padding-right: 15px;
+       padding-top: 8px;
+       padding-bottom: 7px;
+       font-size: 1.2rem;
+       cursor: pointer;
+       position: relative;
+       top: 5px;
     }
     span:hover{
       background-color:#003647;
