--- a/app/assets/stylesheets/redesign/header/locale_selector.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_selector.css.scss
@@ -23,8 +23,11 @@
 
 // Desktop
 #gray-top-banner {
-  background-color: #f5f5f5;
+  background-color: #f5f5f5 ;
   height: 25px;
+  padding-top: 4px;
+  font-weight: 500;
+  font-size: 1.2rem;
   div{
     padding-top: 0;
   }
@@ -34,7 +37,6 @@
       margin-right: 30px;
     }
   }
-  font-weight:700;
 }
 #top-banner {
   font-size: 15px;
