--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -2,6 +2,16 @@
 $gray-light-bg: #f5f5f5;
 $peach-bg: #f6e2d5;
 $pink-bg: #eeddf0;
+
+// Brand Colors
+$c-brand-blue: #003647;
+
+// Neutral Colors
+$c-neutral-black: #000;
+$c-neutral-2: #F5F5F5;
+$c-neutral-5: #e4e4e4;
+$c-neutral-white: #fff;
+
 // @end Colors
 
 // Fonts
