--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1366,6 +1366,7 @@ li#cart-trigger {
         .head{
           margin-top: 30px;
           font-weight :500;
+          font-size: 1.5rem;
         }
         div{
           clear: both;
