--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -11,8 +11,7 @@
 .product-content {
 	position: absolute;
 	z-index: 50;
-  height: 100%;
-	top: 0;
+	top: 20rem;
 
 	.row {
 		padding-top: 1.45rem;
