--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -8,6 +8,7 @@ li class="#{active_link_to_class(return_requests_path)} #{active_link_to_class(i
   ul.nav.nav-second-level.collapse aria-expanded="false" style="height: 0px;"
     li = active_link_to 'Approvals', item_returns_path
     li = active_link_to 'Requests', return_requests_path
+    li = active_link_to 'Old Data', manually_managed_returns_path
 
 - backend_links = [['admin_ui/caches', 'admin_ui/sidekiqs', 'admin_ui/product_indexes'], []]
 li class=active_link_to_class(root_path, active: backend_links)
