--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -81,7 +81,7 @@ ruby:
                   = image_tag('Hamburger.svg', height: '25px')
 
 
-          .masthead.pull-left.visible-xs.visible-sm
+          .masthead.pull-left.visible-xs.visible-sm.mobile-logo-area
             = link_to root_path do
               = image_tag src='logo/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
