--- a/app/views/google_tag_manager/_data_layer.html.erb
+++ b/app/views/google_tag_manager/_data_layer.html.erb
@@ -4,12 +4,7 @@
 
 <script>window.dataLayer = window.dataLayer || [];</script>
 
-<%
-   # TODO: This is not going to stay here. This is going to a before action on a controller
-   # page = Marketing::Gtm::PagePresenter.new(type: 'product', meta_description: get_meta_description, title: get_title, url: request.url)
-   #
-   # @gtm_container.append(page)
-%>
+<% append_gtm_page %>
 
 <script>
     dataLayer.push(<%= @gtm_container.to_json.html_safe %>);
