--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -111,6 +111,7 @@
 		}
 		float: left;
 		p {
+			font-weight: 400;
 			span a{
 				color: black;
 			}
@@ -442,6 +443,9 @@
 }
 
 .copyright {
+	p{
+		font-weight: 400;
+	}
 	@media(max-width:992px){
 		text-align:center;
 	}
