--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -707,6 +707,7 @@ li#cart-trigger {
     float: right;
     margin-right: 10px;
     margin-top:-8px;
+    cursor: pointer;
     img {
       width:30px;
       opacity: 0.7;
