--- a/app/assets/stylesheets/redesign/header/locale_selector.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_selector.css.scss
@@ -36,6 +36,24 @@
       margin-left: 30px;
       margin-right: 30px;
     }
+    .account-menu{
+      z-index: 10;
+      top: 54px;
+      right: -10px;
+      display: none;
+      position: absolute;
+      ul{
+        margin-bottom: 0;
+        li{
+          float: left;
+          font-size: 1.3rem;
+          width: 100%;
+          a{
+            float: left;
+          }
+        }
+      }
+    }
   }
 }
 #top-banner {
