add link to mobile new this week

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -241,7 +241,8 @@ ruby:
                 input type='text' id='side-search' placeholder='SEARCH' name='q'
                 = image_tag "_icons/search.svg", class: "side-search-icon", id: "side-search-icon"
           li.normal-item#new-this-week-open
-            .text NEW THIS WEEK
+            a href='/mystyle?img=graduation-banner&pids[]=355-navy&pids[]=608-teal'
+              .text NEW THIS WEEK
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#dress-menu-open
