--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -818,9 +818,7 @@ li#cart-trigger {
     -moz-transition: margin-left 0.25s;
     transition: margin-left 0.25s;
     a{
-      padding-left: 0;
-      padding-top: 0;
-      padding-bottom: 0;
+      padding: 0;
     }
     .text{
       width: 90%;
