--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -671,7 +671,7 @@ li#cart-trigger {
     }
   }
   nav{
-    height:1700px;
+    height:2500px;
     ul{
       width:100%;
       li{
@@ -1322,8 +1322,10 @@ li#cart-trigger {
       img{
         width: 15%;
       }
-      img:not(:first-child){
-        margin-left: 6.25%;
+      a:not(:first-child){
+        img{
+          margin-left: 6.25%;
+        }
       }
     }
 
