extract error handling to presenters' bodies

--- a/app/views/google_tag_manager/_data_layer.html.erb
+++ b/app/views/google_tag_manager/_data_layer.html.erb
@@ -7,5 +7,5 @@
 <% append_gtm_page %>
 
 <script>
-    dataLayer.push(<%= @gtm_container.to_json.html_safe %>);
+    dataLayer.push(<%= @gtm_container.to_json %>);
 </script>
